--- a/src/views/partials/navbar.ejs
+++ b/src/views/partials/navbar.ejs
@@ -12,10 +12,10 @@
             </div>
             <div class="navbar-nav ms-auto">
                 <% if(!currentUser) {%>
-                    <a href="users/login" class="nav-link">Login</a>
-                    <a href="users/register" class="nav-link">Register</a>
+                    <a href="/login" class="nav-link">Login</a>
+                    <a href="/register" class="nav-link">Register</a>
                     <% } else {%>
-                        <a href="users/logout" class="nav-link">Logout</a>
+                        <a href="/logout" class="nav-link">Logout</a>
                         <% } %>
             </div>
         </div>
