--- a/src/views/users/login.ejs
+++ b/src/views/users/login.ejs
@@ -8,7 +8,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Login</h5>
                         <form action="/users/login" method="POST" class="validated-form" novalidate>
-                            <input type="hidden" name="_csrf" value="<%= csrfToken %>">
+                            <input type="hidden" name="_csrf" value="<%= csurfToken %>">
                             <div class="mb-3">
                                 <label for="email" class="form-label">Email</label>
                                 <input type="text" class="form-control" id="email" name="email" autofocus required>
