Finished the user authentication and authorization system

--- a/src/views/users/login.ejs
+++ b/src/views/users/login.ejs
@@ -7,7 +7,7 @@
                         class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Login</h5>
-                        <form action="/users/login" method="POST" class="validated-form" novalidate>
+                        <form action="/login" method="POST" class="validated-form" novalidate>
                             <input type="hidden" name="_csrf" value="<%= csurfToken %>">
                             <div class="mb-3">
                                 <label for="email" class="form-label">Email</label>
