Implemented the users views

--- a/src/views/layouts/admin.ejs
+++ b/src/views/layouts/admin.ejs
@@ -11,7 +11,7 @@
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 </head>
 
-<body class="d-flex flex-column vh-100 user">
+<body class="d-flex flex-column vh-100 admin">
     <%- include('../partials/navbar') %>
         <main class="container mt-5" style="max-width: 960px">
             <%- include('../partials/flash') %>
