--- a/src/views/users/show.ejs
+++ b/src/views/users/show.ejs
@@ -1,1 +1,5 @@
-<% layout('layouts/boilerplate') %>
+<% if (currentUser && currentUser.role==='Admin' ) {%>
+    <% layout('layouts/admin') %>
+        <% } else {%>
+            <% layout('layouts/boilerplate') %>
+                <% } %>
