--- a/src/views/error.ejs
+++ b/src/views/error.ejs
@@ -1,17 +1,21 @@
-<% layout('layouts/boilerplate') %>
+<% if (currentUser && currentUser.role==='Admin' ) {%>
+    <% layout('layouts/admin') %>
+        <% } else {%>
+            <% layout('layouts/boilerplate') %>
+                <% } %>
 
-    <div class="row">
-        <div class="col-6 offset-3">
-            <div class="alert alert-danger" role="alert">
-                <h4 class="alert-heading">
-                    <%= error.message %>
-                        <%= error.statusCode %>
-                </h4>
-                <% if (process.env.NODE_ENV !=='production' ) {%>
-                    <p>
-                        <%= error.stack %>
-                    </p>
-                    <% } %>
-            </div>
-        </div>
-    </div>
+                    <div class="row">
+                        <div class="col-6 offset-3">
+                            <div class="alert alert-danger" role="alert">
+                                <h4 class="alert-heading">
+                                    <%= error.message %>
+                                        <%= error.statusCode %>
+                                </h4>
+                                <% if (process.env.NODE_ENV !=='production' ) {%>
+                                    <p>
+                                        <%= error.stack %>
+                                    </p>
+                                    <% } %>
+                            </div>
+                        </div>
+                    </div>
