--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -1,1 +1,62 @@
-<% layout('layouts/boilerplate') %>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Game Application</title>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+</head>
+
+<body class="d-flex text-center text-white bg-dark" id="home">
+    <div class="home-cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+        <header class="mb-auto">
+            <div>
+                <h3 class="float-md-start mb-0">Game Centre</h3>
+                <nav class="nav nav-masthead justify-content-center float-md-end">
+                    <a class="home-nav-link active" aria-current="page" href="/">Home</a>
+                    <a class="home-nav-link" href="/games">Games</a>
+                    <% if(currentUser && currentUser.role !=='Admin' ) { %>
+                        <a class="home-nav-link" href="/favorites">Favorites</a>
+                        <% } %>
+                            <% if(!currentUser) {%>
+                                <a href="/login" class="home-nav-link">Login</a>
+                                <a href="/register" class="home-nav-link">Register</a>
+                                <% } else {%>
+                                    <% if (currentUser.role==='Admin' ) { %>
+                                        <a href="/admin" class="home-nav-link">Admin</a>
+                                        <% } else { %>
+                                            <a href="/profiles/<%= currentUser.id %>" class="home-nav-link">Profile</a>
+                                            <% } %>
+                                                <a href="/logout" class="home-nav-link">Logout</a>
+                                                <% } %>
+                </nav>
+            </div>
+        </header>
+        <main class="px-3">
+            <h1>Game Centre</h1>
+            <p class="lead"> Welcome to Game Centre! <br> Jump right in and check out our list of games. <br>
+                Share and read comments, find favorites and new games!</p>
+            <a href="/games" class="btn btn-lg home-btn-secondary font-weight-bold border-white bg-white">View
+                Games</a>
+        </main>
+        <footer class="mt-auto text-white-50">
+            <p>&copy; Game Application 2021</p>
+        </footer>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+        integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js"
+        integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bs-custom-file-input/dist/bs-custom-file-input.js"></script>
+    <script src="/assets/javascripts/validateForms.js"></script>
+    <script src="/assets/javascripts/bundle.js"></script>
+</body>
+
+</html>
