--- a/src/views/users/register.ejs
+++ b/src/views/users/register.ejs
@@ -4,7 +4,7 @@
         <div class="row">
             <div class="col-md-6 offset-md-3 col-xl-4 offset-xl-4 mb-5">
                 <div class="card shadow">
-                    <img src="https://images.unsplash.com/photo-1558023653-ca07c00f026e?crop=entropy&cs=tinysrgb&fit=crop&fm=jpg&h=900&ixid=MnwxfDB8MXxyYW5kb218fHx8fHx8fHwxNjIyNTAzNDQw&ixlib=rb-1.2.1&q=80&utm_campaign=api-credit&utm_medium=referral&utm_source=unsplash_source&w=1600"
+                    <img src="https://images.unsplash.com/photo-1614294148960-9aa740632a87?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80"
                         class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Register</h5>
