--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -1,5 +1,5 @@
 <footer class="footer bg-dark py-3 mt-auto">
-    <div class="container">
+    <div class="d-flex justify-content-center">
         <span class="text-muted"> &copy; Game Application 2021</span>
     </div>
 </footer>
