--- a/src/views/users/edit.ejs
+++ b/src/views/users/edit.ejs
@@ -27,7 +27,8 @@
                                                 </div>
                                             </div>
                                             <div class="mb-3">
-                                                <label for="first_name" class="form-label">First Name</label>
+                                                <label for="first_name" class="form-label">First
+                                                    Name</label>
                                                 <input type="text" class="form-control" id="first_name"
                                                     name="first_name" value="<%=user.first_name%>">
                                                 <div class="valid-feedback">
@@ -38,7 +39,8 @@
                                                 </div>
                                             </div>
                                             <div class="mb-3">
-                                                <label for="last_name" class="form-label">Last Name</label>
+                                                <label for="last_name" class="form-label">Last
+                                                    Name</label>
                                                 <input type="text" class="form-control" id="last_name" name="last_name"
                                                     value="<%=user.last_name%>">
                                                 <div class="valid-feedback">
@@ -67,7 +69,8 @@
                                                     This is a valid input!
                                                 </div>
                                                 <div class="invalid-feedback">
-                                                    Please choose a valid password between 3 and 50 characters.
+                                                    Please choose a valid password between 3 and 50
+                                                    characters.
                                                 </div>
                                             </div>
                                             <div class="mb-3">
@@ -79,11 +82,13 @@
                                                     This is a valid input!
                                                 </div>
                                                 <div class="invalid-feedback">
-                                                    Please choose a valid password between 3 and 50 characters.
+                                                    Please choose a valid password between 3 and 50
+                                                    characters.
                                                 </div>
                                             </div>
                                             <div class="mb-3">
-                                                <label for="admin" class="form-label">Admin Token</label>
+                                                <label for="admin" class="form-label">Admin
+                                                    Token</label>
                                                 <input type="text" class="form-control" id="admin" name="admin">
                                             </div>
                                             <div class="mb-3">
