--- a/src/views/users/show.ejs
+++ b/src/views/users/show.ejs
@@ -3,3 +3,49 @@
         <% } else {%>
             <% layout('layouts/boilerplate') %>
                 <% } %>
+
+                    <div class="row">
+                        <div class="col-lg-2"></div>
+                        <div class="col-lg-8 d-flex justify-content-center">
+                            <div class="card" style="width: 35rem; height: 38rem">
+                                <div class="d-flex justify-content-center">
+                                    <img src="https://images.unsplash.com/photo-1559969143-b2defc6419fd?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=843&q=80"
+                                        class="card-img-top" alt="..."
+                                        style="width: 250px; height: 250px; border-radius: 50%">
+                                </div>
+                                <div class="card-body">
+                                    <div class="card-header">
+                                        <%= user.username %>
+                                    </div>
+                                    <ul class="list-group list-group-flush">
+                                        <li class="list-group-item"><strong>First Name: </strong>
+                                            <%= user.first_name %>
+                                        </li>
+                                        <li class="list-group-item"><strong>Last Name: </strong>
+                                            <%= user.last_name %>
+                                        </li>
+                                        <li class="list-group-item"><strong>Email: </strong>
+                                            <%= user.email %>
+                                        </li>
+                                        <li class="list-group-item"><strong>Role: </strong>
+                                            <%= user.role %>
+                                        </li>
+                                        <li class="list-group-item"><strong>Age: </strong>
+                                            <%= user.age %>
+                                        </li>
+
+                                    </ul>
+                                    <div class="d-flex flex-column bd-highlight mb-3">
+                                        <a href="/profiles/<%=user.id%>/edit" class="card-link btn btn-info">Edit</a>
+
+                                        <form class="d-flex flex-column bd-highlight mt-3"
+                                            action="/profiles/<%=user.id%>?_method=DELETE" method="POST">
+                                            <input type="hidden" name="_csrf" value="<%= csurfToken %>">
+                                            <button class="btn btn-danger">Delete</button>
+                                        </form>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-2"></div>
+                    </div>
