--- a/src/views/users/edit.ejs
+++ b/src/views/users/edit.ejs
@@ -11,10 +11,10 @@
                                     <img src="https://images.unsplash.com/photo-1605134550917-5fe8cf25a125?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1950&q=80"
                                         class="card-img-top" alt="...">
                                     <div class="card-body">
-                                        <h5 class="card-title">Update User Information</h5>
                                         <form action="/profiles/<%=user.id%>?_method=PUT" method="POST"
                                             class="validated-form" novalidate>
                                             <input type="hidden" name="_csrf" value="<%= csurfToken %>">
+                                            <h1 class="text-center h3 mb-3 fw-normal">Update</h1>
                                             <div class="mb-3">
                                                 <label for="username" class="form-label">Username</label>
                                                 <input type="text" class="form-control" id="username" name="username"
@@ -96,7 +96,7 @@
                                                 <input type="number" class="form-control" id="age" name="age" min="0"
                                                     max="115" value="<%=user.age%>">
                                             </div>
-                                            <button class="btn btn-info btn-block">Update</button>
+                                            <button class="w-100 btn btn-lg btn-info">Update</button>
                                         </form>
                                     </div>
                                 </div>
