--- a/src/views/users/login.ejs
+++ b/src/views/users/login.ejs
@@ -1,14 +1,14 @@
 <% layout('layouts/boilerplate') %>
     <div class="container d-flex justify-content-center align-items-center mt-5">
         <div class="row">
-            <div class="col-md-6 offset-md-3 col-xl-4 offset-xl-4">
+            <div class="col-md-6 offset-md-3 col-xl-4 offset-xl-4 mb-5">
                 <div class="card shadow">
                     <img src="https://images.unsplash.com/photo-1580234811497-9df7fd2f357e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1047&q=80"
                         class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Login</h5>
                         <form action="/login" method="POST" class="validated-form" novalidate>
                             <input type="hidden" name="_csrf" value="<%= csurfToken %>">
+                            <h1 class="text-center h3 mb-3 fw-normal">Login</h1>
                             <div class="mb-3">
                                 <label for="email" class="form-label">Email</label>
                                 <input type="text" class="form-control" id="email" name="email" autofocus required>
@@ -29,7 +29,9 @@
                                     Please write a password.
                                 </div>
                             </div>
-                            <button class="btn btn-success btn-block">Login</button>
+                            <div class="mb-3">
+                                <button class="w-100 btn btn-lg btn-primary">Login</button>
+                            </div>
                         </form>
                     </div>
                 </div>
