--- a/src/views/games/show.ejs
+++ b/src/views/games/show.ejs
@@ -1,24 +1,124 @@
-<% if (currentUser && currentUser.role==='Admin' ) {%>
-    <% layout('layouts/admin') %>
-        <% } else {%>
-            <% layout('layouts/boilerplate') %>
-                <% } %>
+<!DOCTYPE html>
+<html lang="en">
 
-                    <div class="card mb-5" style="width: 30%;">
-                        <% if (game.cover) {%>
-                            <img src="https://images.igdb.com/igdb/image/upload/t_1080p/<%= game.cover.image_id %>.jpg"
-                                class="card-img-top img-game" alt="...">
-                            <% } else { %>
-                                <img src="https://images.unsplash.com/photo-1595452767427-0905ad9b036d?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=334&q=80"
-                                    class="card-img-top img-game" alt="...">
-                                <% } %>
-                                    <div class="card-body">
-                                        <h2 class="card-title">
-                                            <%= game.name %>
-                                        </h2>
-                                        <p class="card-text">
-                                            <%= game.summary %>
-                                        </p>
-                                        <a href="#" class="btn btn-primary">Go somewhere</a>
-                                    </div>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Game Centre</title>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <link rel="stylesheet" href="/assets/stylesheets/stars.css">
+</head>
+
+<body class="d-flex flex-column vh-100">
+    <%- include('../partials/navbar') %>
+        <main>
+            <%- include('../partials/flash') %>
+                <div class="position-relative overflow-hidden text-center">
+                    <div class="w-100 h-100 position-absolute bg"
+                        style="background-image: url('https://images.igdb.com/igdb/image/upload/t_1080p/<%= game.cover.image_id %>.jpg')">
                     </div>
+                    <div class="d-flex">
+                        <div class="w-25 h-50">
+                            <% if (game.cover) {%>
+                                <img src="https://images.igdb.com/igdb/image/upload/t_1080p/<%= game.cover.image_id %>.jpg"
+                                    class="card-img-top p-3" alt="...">
+                                <% } else { %>
+                                    <img src="https://images.unsplash.com/photo-1595452767427-0905ad9b036d?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=334&q=80"
+                                        class="card-img-top p-3" alt="...">
+                                    <% } %>
+                        </div>
+                        <div class="w-75 h-50 card-body">
+                            HI
+                        </div>
+                    </div>
+                </div>
+                <div class="w-100 mb-5 card text-center m-auto">
+                    <div class="card-header">
+                        Summary
+                    </div>
+                    <div class="card-body">
+                        <p class="card-text">
+                            <%= game.summary %>
+                        </p>
+                    </div>
+                </div>
+
+
+                <div class="col-6">
+                    <% if(currentUser) {%>
+                        <h2>Leave a Review</h2>
+                        <form action="/games/<%=game.id%>/reviews" method="POST" class="mb-3 validated-form" novalidate>
+                            <input type="hidden" name="_csrf" value="<%= csurfToken %>">
+                            <div class="mb-3">
+                                <fieldset class="starability-grow">
+                                    <legend>Rating:</legend>
+                                    <input type="radio" id="no-rate" class="input-no-rate" name="review[rating]"
+                                        value="0" checked aria-label="No rating." />
+                                    <input type="radio" id="first-rate1" name="review[rating]" value="1" />
+                                    <label for="first-rate1" title="Terrible">1 star</label>
+                                    <input type="radio" id="first-rate2" name="review[rating]" value="2" />
+                                    <label for="first-rate2" title="Not good">2 stars</label>
+                                    <input type="radio" id="first-rate3" name="review[rating]" value="3" />
+                                    <label for="first-rate3" title="Average">3 stars</label>
+                                    <input type="radio" id="first-rate4" name="review[rating]" value="4" />
+                                    <label for="first-rate4" title="Very good">4 stars</label>
+                                    <input type="radio" id="first-rate5" name="review[rating]" value="5" />
+                                    <label for="first-rate5" title="Amazing">5 stars</label>
+                                </fieldset>
+                            </div>
+                            <div class="mb-3">
+                                <label class="form-label" for="body">Review:</label>
+                                <textarea class="form-control" name="review[body]" id="body" cols="30" rows="3"
+                                    required></textarea>
+                                <div class="valid-feedback">
+                                    This is a valid input!
+                                </div>
+                            </div>
+                            <button class="w-100 btn btn-lg btn-success">Submit</button>
+                        </form>
+                        <% } else {%>
+                            <h2>Reviews</h2>
+                            <% } %>
+                                <% for (let i=0; i < reviews.length; i++) {%>
+                                    <div class="card mb-3">
+                                        <div class="card-body">
+                                            <h5 class="card-title">
+                                                <%= users[i].username %>
+                                            </h5>
+                                            <p class="starability-result" data-rating="<%= review.rating %>">
+                                                Rated: <%= reviews[i].rating %> stars
+                                            </p>
+                                            <p class="card-text">
+                                                <%= reviews[i].body %>
+                                            </p>
+                                            <% if (currentUser && (users[i].id===currentUser.id)) {%>
+                                                <form
+                                                    action="/games/<%=game.id%>/reviews/<%=reviews[i]._id%>?_method=DELETE"
+                                                    method="POST">
+                                                    <input type="hidden" name="_csrf" value="<%= csurfToken %>">
+                                                    <button class="btn btn-sm btn-danger">Delete</button>
+                                                </form>
+                                                <% } %>
+                                        </div>
+                                    </div>
+                                    <% } %>
+                </div>
+                </div>
+        </main>
+        <%- include('../partials/footer') %>
+
+            <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+                integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+                crossorigin="anonymous"></script>
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js"
+                integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT"
+                crossorigin="anonymous"></script>
+            <script src="https://cdn.jsdelivr.net/npm/bs-custom-file-input/dist/bs-custom-file-input.js"></script>
+            <script src="/assets/javascripts/validateForms.js"></script>
+            <script src="/assets/javascripts/bundle.js"></script>
+</body>
+
+</html>
