Updated the individual games pages

--- a/public/assets/stylesheets/app.css
+++ b/public/assets/stylesheets/app.css
@@ -2,14 +2,12 @@
     background-image: linear-gradient(to right, #240035, #670979 40%, #1b80d0 100%);
     background-size: cover;
     background-position: center;
-    background-repeat: no-repeat;
 }
 
 .admin{
     background: linear-gradient(90deg, hsla(152, 100%, 50%, 1) 0%, hsla(186, 100%, 69%, 1) 100%);
     background-size: cover;
     background-position: center;
-    background-repeat: no-repeat;
 }
 
 .bg{
@@ -119,4 +117,8 @@
 .search-game:focus{
     outline: none;
     background-color: #22254b;
+}
+
+.circle{
+    border-radius: 50%;
 }
