--- a/src/views/partials/navbar.ejs
+++ b/src/views/partials/navbar.ejs
@@ -18,7 +18,7 @@
                         <% if (currentUser.role==='Admin' ) { %>
                             <a href="/admin" class="nav-link">Admin</a>
                             <% } else { %>
-                                <a class="nav-link" href="/favorites">Favorites</a>
+                                <a class="nav-link" href="/profiles/<%= currentUser.id %>/favorites">Favorites</a>
                                 <a href="/profiles/<%= currentUser.id %>" class="nav-link">Profile</a>
                                 <% } %>
                                     <a href="/logout" class="nav-link">Logout</a>
